Issue #3233016 by Kingdutch, Ressinel: Email notifications on user settings page should not collapse.

--- a/modules/custom/activity_send/modules/activity_send_email/css/activity_send_email.admin.scss
+++ b/modules/custom/activity_send/modules/activity_send_email/css/activity_send_email.admin.scss
@@ -1,5 +1,4 @@
 .user-form {
-
   .form-email-notification {
 
     .icon {
@@ -7,85 +6,51 @@
       height: 24px;
     }
 
-    .card__title {
-      padding: 0;
+   .form-fieldset {
+      box-shadow: none;
+      border-radius: 0;
+      margin-bottom: 1rem;
 
-      a {
-        padding: 1rem 1.25rem;
-        position: relative;
-        display: block;
-      }
-
-      .icon {
-        position: absolute;
-        top: 50%;
-        right: 15px;
-        transform: translateY(-50%);
-      }
-
-    }
-
-    > .card__title {
-      border-bottom: none;
-
-      a[aria-expanded="true"] {
-        border-bottom: 1px solid #e6e6e6;
-      }
-    }
-
-    [id*='edit-email-notifications--content'] {
-      padding-top: 1rem;
-      padding-bottom: 1.5rem;
-
-      > .form-fieldset {
-        box-shadow: none;
-        border-radius: 0;
-        margin-bottom: 1rem;
-
-        &:last-child {
-          margin-bottom: 0;
-
-          .card__title {
-            border-bottom: none;
-          }
-
-        }
+      &:last-child {
+        margin-bottom: 0;
 
         .card__title {
-          border-bottom-color: #f3f3f3;
-
-          a {
-            padding: 0 0 1rem;
-          }
-
-          svg {
-            top: -3px;
-            right: -5px;
-            transform: none;
-          }
-        }
-
-        .card__block {
-          padding: 1.5rem;
-          margin-bottom: .5rem;
-          background-color: #f3f3f3;
-
-          .form-item {
-            margin-bottom: 1.25rem;
-
-            &:last-child {
-              margin-bottom: 0;
-            }
-          }
-
+          border-bottom: none;
         }
 
       }
 
-    }
+      .card__title {
+        border-bottom-color: #f3f3f3;
+        padding: 0;
 
-    [data-drupal-selector='edit-email-notifications-description'] {
-      margin-bottom: 1.5rem;
+        a {
+          padding: 0 0 1rem;
+          display: block;
+          position: relative;
+        }
+
+        svg {
+          top: -3px;
+          right: -5px;
+          transform: none;
+          position: absolute;
+        }
+      }
+
+      .card__block {
+        padding: 1.5rem;
+        margin-bottom: .5rem;
+        background-color: #f3f3f3;
+
+        .form-item {
+          margin-bottom: 1.25rem;
+
+          &:last-child {
+            margin-bottom: 0;
+          }
+        }
+      }
     }
 
     &.form-horizontal .control-label--wide {
